<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_group"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signin_email"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_top"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/purple_light"
            android:textColorHint="@color/edit_text_color" />

        <EditText
            android:id="@+id/signin_password"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bottom"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/purple_light"
            android:textColorHint="@color/edit_text_color" />

        <Button
            android:id="@+id/signin_btn"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/purple_200" />

        <TextView
            android:id="@+id/signup_text"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signupNow"
            android:textAllCaps="true"
            android:textColor="@color/white_shadow"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signup_Consumer"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/purple"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="10dp"
                android:text="    User    "
                android:textAllCaps="true"
                android:textColor="@color/white_shadow"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup_Partner"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:background="@color/purple"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="10dp"
                android:text="Partner"
                android:textAllCaps="true"
                android:textColor="@color/white_shadow"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:visibility="gone"
        app:indicatorColor="@android:color/white"
        app:indicatorName="BallScaleMultipleIndicator" />
</RelativeLayout>