<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:gravity="center_horizontal"
    tools:context=".AboutUsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_attempt"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/purple_200"
            app:navigationIcon="@drawable/ic_keyboard_arrow_left_black_24dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">
            <!--Business Category rl11,bcategory-->
            <RelativeLayout
                android:id="@+id/faqs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="FAQs"
                    android:textColor="@color/black"
                    android:textSize="25dp"

                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_expand_more_black_24dp" />
            </RelativeLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/faqs_expand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/faqs"
                android:layout_marginTop="5dp"
                app:ael_interpolator="bounce"
                app:ael_orientation="horizontal"
                app:el_duration="500"
                app:el_expanded="false"
                app:el_parallax="1">
                <!--Business Types-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/gridview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/FAQs"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>


            <RelativeLayout
                android:id="@+id/about_app_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/faqs_expand"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rate The app"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/tv3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:background="@color/Sunset_Orange" />

                <RatingBar

                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view2"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="5dp"
                    android:numStars="5" />

                <Button
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view2"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_toEndOf="@id/rating"
                    android:text="Rate" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_app_rate"
                android:text="@string/about_admin"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view1"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_below="@id/tv1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="@color/Sunset_Orange" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/OwnerIMAGE"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_below="@id/view1"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user" />


            <TableRow
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/OwnerIMAGE"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@color/purple_500"
                    android:fontFamily="@font/lato_black"
                    android:padding="8dp"
                    android:text="@string/name"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/StudentID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:background="@color/purple_700"
                    android:fontFamily="@font/lato_bold"
                    android:padding="8dp"
                    android:text="shubham"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/t3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@color/purple_500"
                    android:fontFamily="@font/lato_black"
                    android:padding="8dp"
                    android:text="Course"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/SemID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:background="@color/purple_700"
                    android:fontFamily="@font/lato_bold"
                    android:padding="8dp"
                    android:text="B.Tech( CSE )"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/t4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@color/purple_500"
                    android:fontFamily="@font/lato_black"
                    android:padding="5dp"
                    android:text="Email"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Branchid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:background="@color/purple_700"
                    android:fontFamily="@font/lato_bold"
                    android:padding="5dp"
                    android:text="shubham@gmail.com"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <LinearLayout
                android:id="@+id/about_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t5"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg"
                android:elevation="100dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_developer"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="130dp"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/Sunset_Orange" />

                <TextView
                    android:id="@+id/quotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/deltail_developer"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/Sunset_Orange" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/shubhLinkedIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:scaleType="center"
                        android:src="@drawable/linkedin"
                        app:fabSize="normal" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/gmailLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:backgroundTint="@color/white"
                        android:scaleType="center"
                        android:src="@drawable/gmail"
                        app:fabSize="normal" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>